<resources>

    <!--Navigation Drawer-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_item_camera">Home</string>
    <string name="drawer_item_received_requests">Pay Your Friends</string>
    <string name="drawer_item_sent_requests">Sent Requests</string>
    <string name="drawer_item_friends">Friends</string>
    <string name="drawer_item_my_account">My Account</string>
    <string name="drawer_item_sign_out">Sign out</string>
    <!--Login View-->
    <string name="app_name">SnapSplit</string>
    <string name="login">Login to your Citi Bank account</string>
    <string name="details">Get details</string>
    <string name="tagline">Splitting bills made simple</string>
    <string name="forget_password">Forget Password?</string>
    <!--OCR camera View-->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <!--Select Friends View-->
    <string name="split_with">Split with&#8230;</string>
    <string name="payment_requests_will_be_sent_to">Payment Requests will be sent to</string>
    <string name="send_requests">Send Requests</string>
    <string name="shop_name">Starbucks</string>
    <string name="total_amount">Total Amount: $38</string>
    <string name="friend_name_1">Bryant Ryan</string>
    <string name="friend_name_2">Roman Sherman</string>
    <string name="friend_name_3">Herman Nash</string>
    <string name="friend_name_4">Megan Gibbs</string>
    <string name="friend_name_5">Drew Jennings</string>
    <string name="friend_name_6">Jean Morton</string>
    <string name="phone_number_1">6990 4671</string>
    <string name="phone_number_2">7559 0909</string>
    <string name="phone_number_3">9340 3878</string>
    <string name="phone_number_4">9422 7284</string>
    <string name="phone_number_5">9078 4420</string>
    <string name="phone_number_6">5773 0936</string>
    <!--Confirmation View-->
    <string name="confirm">Confirmation</string>
    <string name="requests">Requests</string>
    <string name="friends_selection">Split With&#8230;</string>
    <string name="each">Each: </string>
    <string name="search">\u0020\u0020Search &#8230;</string>
    <string name="frequently_used">Frequently Used</string>
    <string name="others">Others</string>
    <string name="payment_request_sent">Payment requests sent</string>
    <!--Google Async Signin -->
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Confirm payment</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">You can proceed to purchase with this button \n even if a new fingerprint is enrolled</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key" >use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <!--Add Friends-->
    <string name="find_contact">Find Contacts</string>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="search_hint">Find Contact</string>

    <!-- Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by
         alphabet using ListView fast scroll. -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!-- When using ContactsContract.Contacts#CONTENT_FILTER_URI to search contacts, a match occurs
         when using a number of different fields, such as name, e-mail address, address, phone
         number, etc. When a match occurs that is not the name, there is currently no way to tell
         which other field was matched. This string is displayed in the secondary display text in
         ContactsListFragment when a search query match occurs that is not the display name.
         -->
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <!--Logout view-->
    <string name="logout">Logout</string>
</resources>
