<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:title="@string/drawer_item_camera" />
        <item
            android:id="@+id/nav_received_requests"
            android:title="@string/drawer_item_received_requests" />
        <item
            android:id="@+id/nav_sent_requests"
            android:title="@string/drawer_item_sent_requests" />
        <item
            android:id="@+id/nav_my_account"
            android:title="@string/drawer_item_my_account" />
        <item
            android:id="@+id/nav_friends"
            android:title="@string/drawer_item_friends" />
        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/drawer_item_sign_out" />
    </group>
</menu>