<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:visibility="visible">



    <RelativeLayout
        android:id="@+id/relative_summary"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:background="@drawable/black_border"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/receipt_icon"/>

        <TextView
            android:id="@+id/text_summary_shop"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:paddingStart="20dp"
            android:paddingTop="18dp"
            android:text="@string/shop_name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_summary_amount"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:paddingStart="20dp"
            android:text="@string/total_amount"
            android:textColor="#696969" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_search"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_below="@+id/relative_summary"
        android:layout_alignStart="@+id/relative_summary">

        <TextView
            android:id="@+id/text_payment"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/payment_requests_will_be_sent_to"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#696969" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_other_friends"
        android:layout_width="350dp"
        android:layout_height="210dp"
        android:background="@drawable/black_border"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginTop="89dp"
        android:layout_below="@+id/relative_summary"
        android:layout_alignStart="@+id/relative_search">

        <ImageView
            android:id="@+id/img_friend_1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/user"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:padding="8dp" />

        <TextView
            android:id="@+id/text_friend_1_name"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/img_friend_1"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/friend_name_1"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_friend_1_phone"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_below="@+id/text_friend_1_name"
            android:layout_toEndOf="@+id/img_friend_1"
            android:paddingStart="20dp"
            android:text="@string/phone_number_1"
            android:textColor="#696969" />

        <TextView
            android:id="@+id/text_friend_1_split"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:paddingTop="26dp"
            android:text="@string/split_1"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/img_friend_2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/user"
            android:layout_below="@+id/img_friend_1"
            android:layout_alignParentStart="true"
            android:padding="8dp" />

        <TextView
            android:id="@+id/text_friend_2_name"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_below="@+id/img_friend_1"
            android:layout_toEndOf="@+id/img_friend_2"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/friend_name_3"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_friend_2_phone"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_below="@+id/text_friend_2_name"
            android:layout_toEndOf="@+id/img_friend_2"
            android:paddingStart="20dp"
            android:text="@string/phone_number_3"
            android:textColor="#696969" />

        <TextView
            android:id="@+id/text_friend_2_split"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/text_friend_1_split"
            android:paddingTop="26dp"
            android:text="@string/split_3"
            android:textColor="@color/colorAccent" />

        <ImageView
            android:id="@+id/img_friend_3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/user"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:padding="8dp" />

        <TextView
            android:id="@+id/text_friend_3_name"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_below="@+id/img_friend_2"
            android:layout_toEndOf="@+id/img_friend_3"
            android:paddingTop="15dp"
            android:paddingStart="20dp"
            android:text="@string/friend_name_6"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_friend_3_phone"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_below="@+id/text_friend_3_name"
            android:layout_toEndOf="@+id/img_friend_3"
            android:paddingStart="20dp"
            android:text="@string/phone_number_6"
            android:textColor="#696969" />

        <TextView
            android:id="@+id/text_friend_3_split"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:paddingTop="26dp"
            android:text="@string/split_6"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/send_requests"
        android:layout_marginBottom="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/relative_other_friends"
        android:layout_alignEnd="@+id/relative_other_friends"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>

</RelativeLayout>