<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:fontFamily="Source Sans Pro"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="65sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:visibility="visible"
        android:src="@drawable/logo_outline_white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:id="@+id/relativeLayout">

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="77dp"
            android:background="@drawable/roundedbutton"
            android:paddingEnd="35dp"
            android:paddingStart="35dp"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btn_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:paddingEnd="35dp"
            android:paddingStart="35dp"
            android:text="@string/details"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/btn_logout"
            android:layout_centerHorizontal="true"
            android:visibility="visible"/>

    </RelativeLayout>

</RelativeLayout>