<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:visibility="visible">



    <RelativeLayout
        android:id="@+id/relative_summary"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:background="@drawable/black_border"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/receipt_icon"
            android:id="@+id/imageView" />

        <TextView
            android:id="@+id/text_summary_shop"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:paddingTop="18dp"
            android:text="@string/shop_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView" />

        <TextView
            android:id="@+id/text_summary_amount"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/text_selected_friends"
            android:paddingStart="20dp"
            android:text="@string/total_amount"
            android:textColor="#696969" />

        <TextView
            android:id="@+id/text_selected_friends"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/text_summary_shop"
            android:layout_alignBottom="@+id/text_summary_shop"
            android:layout_toEndOf="@+id/text_summary_shop"
            android:paddingTop="18dp"
            android:text="@string/selected_friends"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_selected_friends_no"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/text_selected_friends"
            android:layout_alignBottom="@+id/text_selected_friends"
            android:layout_alignParentEnd="true"
            android:paddingTop="18dp"
            android:text="@string/selected_friends_no"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_each"
            android:layout_width="43dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/text_summary_amount"
            android:text="@string/each"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_each_price"
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/text_selected_friends"
            android:text="@string/each_price"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_payment"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/relative_summary"
        android:layout_below="@+id/relative_summary"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/editText_search_bar"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_input_search"
            android:layout_marginTop="13dp"
            android:background="@drawable/black_border"
            android:hint="@string/search"
            android:inputType="text" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="25dp"
        android:layout_alignStart="@+id/relative_payment"
        android:layout_below="@+id/relative_payment"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/relativeLayout2">

        <TextView
            android:id="@+id/text_frequently_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequently_used"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_straight_line_1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:text="@string/frequently_used" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_friends"
        android:layout_width="350dp"
        android:layout_height="210dp"
        android:background="@drawable/black_border"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginTop="49dp"
        android:layout_alignTop="@+id/relativeLayout2"
        android:layout_alignStart="@+id/relativeLayout2">


        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/text_friend_1_name"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/friend_name_1"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_above="text_friend_2_phone"
            android:layout_toRightOf="@+id/img_friend_2" />

        <TextView
            android:id="@+id/text_friend_1_phone"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:paddingStart="20dp"
            android:text="@string/phone_number_1"
            android:textColor="#696969"
            android:layout_below="@+id/text_friend_1_name"
            android:layout_alignStart="@+id/text_friend_1_name" />

        <TextView
            android:id="@+id/text_friend_1_split"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:paddingTop="26dp"
            android:text="@string/split_1"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/img_friend_2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/user"
            android:padding="8dp"
            android:layout_below="@+id/text_friend_1_phone"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/text_friend_2_name"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/friend_name_2"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_below="@+id/text_friend_1_phone"
            android:layout_toEndOf="@+id/img_friend_2" />

        <TextView
            android:id="@+id/text_friend_2_phone"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:paddingStart="20dp"
            android:text="@string/phone_number_2"
            android:textColor="#696969"
            android:layout_above="@+id/img_friend_3"
            android:layout_toEndOf="@+id/img_friend_2" />

        <TextView
            android:id="@+id/text_friend_2_split"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/text_friend_1_split"
            android:paddingTop="26dp"
            android:textColor="@color/colorAccent" />

        <ImageView
            android:id="@+id/img_friend_3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/user"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:padding="8dp" />

        <TextView
            android:id="@+id/text_friend_3_name"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_below="@+id/img_friend_2"
            android:layout_toEndOf="@+id/img_friend_3"
            android:paddingTop="15dp"
            android:paddingStart="20dp"
            android:text="@string/friend_name_3"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_friend_3_phone"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_below="@+id/text_friend_3_name"
            android:layout_toEndOf="@+id/img_friend_3"
            android:paddingStart="20dp"
            android:text="@string/phone_number_3"
            android:textColor="#696969" />

        <TextView
            android:id="@+id/text_friend_3_split"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:paddingTop="26dp"
            android:text="@string/split_3"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_below="@+id/relative_friends"
        android:layout_alignStart="@+id/relative_friends">

        <TextView
            android:id="@+id/text_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_straight_line_2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:text="@string/frequently_used" />

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/send_requests"
        android:layout_marginBottom="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/relative_friends"
        android:layout_alignEnd="@+id/relative_friends"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>

</RelativeLayout>